--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <!-- Paste link foto dari GitHub atau ImgBB di dalam tanda petik src="" -->
                             <div class="w-24 h-24 flex-shrink-0">
                                 <img 
-                                    src="https://ibb.co.com/rbh8Ydn" 
+                                    src="https://i.ibb.co.com/Q8VSLDs/Formal-photo.jpg" 
                                     alt="Foto Profil" 
                                     class="w-full h-full rounded-full object-cover border-2 border-green-500 shadow-lg"
                                 >
