--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
                     <div class="flex-1 text-center md:text-left">
                         <div class="inline-block px-3 py-1 bg-yellow-500/10 text-yellow-500 text-xs font-bold rounded-full mb-3">
                             TAHUN 2023
+                            <img src="https://i.ibb.co.com/FRjgCVf/Juara3-KRC-Varian-Rhesa.png">
                         </div>
                         <h3 class="text-2xl font-bold text-white mb-2">Juara 3 Kontes Robot Cerdas</h3>
                         <p class="text-slate-400 mb-4">Provinsi Kalimantan Timur</p>
