--- a/index.html
+++ b/index.html
@@ -366,7 +366,18 @@
                     <h3 class="text-white font-semibold mb-1">Telepon</h3>
                     <p class="text-slate-400 text-sm">0895-1962-8044</p>
                 </div>
+
+                <!-- Github -->
+                <a href="https://github.com/Varian719" target="_blank" class="p-6 bg-slate-800 rounded-xl border border-slate-700 hover:border-green-500 hover:bg-slate-800/80 transition-all group">
+                    <div class="flex justify-center mb-4">
+                        <i data-lucide="Github" class="text-green-500 w-8 h-8 group-hover:scale-110 transition-transform"></i>
+                    </div>
+                    <h3 class="text-white font-semibold mb-1">Github</h3>
+                    <p class="text-slate-400 text-sm">Varian719</p>
+                </a>
             </div>
+
+           
             
             <div class="mt-12 pt-8 border-t border-slate-800">
                <p class="text-slate-500 text-sm">
